# ReliableMessageDelivery

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  Message.proto  README.md  docker-compose.yml  record.md
client/: CMakeLists.txt  client.cpp  main_client.cpp
client/include/: Client.h
client/src/: Client.cpp
protocol/: Codec.h  EnvelopeFactory.h  EnvelopeInspector.h  Message.proto
records/: 2026-05-02-protobuf-codec.md  2026-05-03-online-forwarding.md  2026-05-04-server-event-dispatcher-message-store-benchmark.md  2026-05-05-reliable-delivery-ack-retry-idempotency.md  2026-05-22-压力测试.md  2026-06-14.md  2026-06-17-web-gateway-progress.md  2026-06-21-browser-ack-render-blocking.md  2026-6-11-Redis MessageStore.md
server/: CMakeLists.txt  main_service.cpp  service.cpp
server/include/: ChatServer.h  MessageStore.h  ServerEventDispatcher.h  UserStateService.h
server/src/: ChatServer.cpp  MessageStore.cpp  ServerEventDispatcher.cpp  UserStateService.cpp
web_gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json  web-gateway-design.md
web_gateway/public/: app.js  index.html  style.css
web_gateway/src/: AuthService.ts  ImClient.ts  ImProtocol.ts  WebSocketServer.ts  WsSessionManager.ts  server.ts
